RESOLVED FIXED111438
Web Inspector: Clicks in browser windows are off after a debug session.
https://bugs.webkit.org/show_bug.cgi?id=111438
Summary Web Inspector: Clicks in browser windows are off after a debug session.
Sanford Selznick
Reported 2013-03-05 07:15:46 PST
I'm not sure if this is WebKit or Web Inspector. After a debug session in split window mode, later web pages that are *not* in debug mode have coordinate/click problems. Here's how I reproduce it reliably: 0) Launch WebKit.app. 1) Open up a web page for debugging in split screen mode (debugger in bottom half.) Normal document sized window. 2) Set a breakpoint at some button action. 3) Click around in the web page to make the debugger stop at the breakpoint from (2). 4) Close all Safari windows. But don't quit. (Stick with me here.) 5) Go to bugs.webkit.org in a new window. 6) Create a new inspector bug report. 7) Select platform Mac Intel, OS 10.8 8) Click in "Description" field. The "Description" field will resize. This is important, I think. 9) Try to click and hold on the "Add an Attachment" button. Result: It won't work. It thinks I'm clicking elsewhere. 10) Click around some more. Clicks are off by about 200 pixels. This happened a little with the release Safari.app. Then went away in the WebKit nightlies. Now it's back. I hope this helps.
Attachments
Movie of click offsets... (853.57 KB, video/quicktime)
2013-05-17 10:04 PDT, Sanford Selznick
no flags
OnLoad sample used in movie. (497 bytes, text/plain)
2013-05-17 13:42 PDT, Sanford Selznick
no flags
Movie start to finish. (6.35 MB, video/quicktime)
2013-05-17 13:44 PDT, Sanford Selznick
no flags
Patch (1.40 KB, patch)
2013-05-17 14:07 PDT, Timothy Hatcher
no flags
Sanford Selznick
Comment 1 2013-03-05 07:16:29 PST
(No plug-ins, mostly stock system. I haven't tried other systems yet.)
Sanford Selznick
Comment 2 2013-04-05 23:04:26 PDT
Has anyone taken a look at this? I find myself quitting and re-running Safari after most debug sessions, which is not very convenient.
Timothy Hatcher
Comment 3 2013-05-17 09:45:08 PDT
I can't reproduce in the latest nightly. I do remember seeing something like this in Safari 6 about scrolling and going back/forward. But not related to the docked Web Inspector, and never after closing the window. Does it still reproduce for you? Always?
Sanford Selznick
Comment 4 2013-05-17 10:04:02 PDT
Created attachment 202115 [details] Movie of click offsets... Unfortunately the problem persists for me in the latest nightly. Attached is a movie of me triple-clicking around. Towards the end you'll see me triple-click in one location, a popup appears, but nowhere near the menu itself. Other clicks do other interesting things. The cursor is visible in the movie. I tried to capture mac-audio, but the sound of my clicking didn't make it through.
Sanford Selznick
Comment 5 2013-05-17 10:06:07 PDT
> Does it still reproduce for you? Always? Yes, always.
Timothy Hatcher
Comment 6 2013-05-17 11:25:17 PDT
Thanks for the screencast. Can you record one for all the steps to reproduce the issue? I still haven't had any luck reproducing.
Sanford Selznick
Comment 7 2013-05-17 13:42:23 PDT
Created attachment 202151 [details] OnLoad sample used in movie. This was done with this morning's web kit, not this afternoon's. This afternoon's webkit was crashing on the second window because of 116347. Attached is the HTML file in the new movie. And the new movie itself. I hope this helps!
Timothy Hatcher
Comment 8 2013-05-17 13:44:25 PDT
Thanks, I don't see the new movie that you mention.
Sanford Selznick
Comment 9 2013-05-17 13:44:45 PDT
Created attachment 202152 [details] Movie start to finish. Note: WebKit is launched when I drag the proxy icon to WebKit in my dock. I don't know why the webkit home page is not displaying on launch. Get Info in the Finder says: r150245, Copyright 2005-2009 Apple Inc.
Timothy Hatcher
Comment 10 2013-05-17 13:45:08 PDT
Thanks!
Timothy Hatcher
Comment 11 2013-05-17 14:04:15 PDT
I still can't reproduce. But I have a speculative fix.
Timothy Hatcher
Comment 12 2013-05-17 14:07:00 PDT
Joseph Pecoraro
Comment 13 2013-05-17 14:08:46 PDT
Comment on attachment 202156 [details] Patch r=me
WebKit Commit Bot
Comment 14 2013-05-17 20:11:33 PDT
Comment on attachment 202156 [details] Patch Clearing flags on attachment: 202156 Committed r150320: <http://trac.webkit.org/changeset/150320>
WebKit Commit Bot
Comment 15 2013-05-17 20:11:36 PDT
All reviewed patches have been landed. Closing bug.
Sanford Selznick
Comment 16 2013-05-19 16:56:51 PDT
Sorry about this. It does not appear to be fixed over here in r150351. One thing to note when you try to reproduce it: Are you scrolling down on the page and clicking in the "Additional Comments" field? Is it growing? The offsets are fine if I don't scroll down on this bugs.webkit.orgs page. It's clicking in the field after scrolling that things get off. I'm on a 2-year-old old 17" MBP. 10.8.3. Please let me know how I can help.
Timothy Hatcher
Comment 17 2013-05-19 18:00:15 PDT
Thanks for testing. Yes, I was scrolling down. Does it reproduce for you if you continue the debugger before closing the window? Is the Web Inspector a required step at all?
Sanford Selznick
Comment 18 2013-05-19 18:08:31 PDT
It appears to be ok if I continue the debugger and close the window (and all tabs). And then visit this bug page.
Brian Burg
Comment 19 2014-08-03 19:08:29 PDT
Please reopen in component [Web Inspector] if the bug still reproduces in trunk.
Note You need to log in before you can comment on or make changes to this bug.